--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "set PORT=5000 && react-scripts start",
+    "start": "NODE_OPTIONS=--max-old-space-size=4096 set PORT=5000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
