--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "20",
+    "node": "20.11.1",
     "npm": "6.14.5"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -24,6 +25,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^5.10.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "formik": "^2.2.9",
@@ -31,11 +33,15 @@
     "increase-memory-limit": "^1.0.7",
     "material-table": "^1.69.3",
     "material-ui": "^0.20.2",
+    "orgchart": "^3.8.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-csv": "^2.2.2",
+    "react-d3-tree": "^3.6.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.16.1",
+    "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.0.0",
@@ -49,7 +55,7 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-   "start": "set PORT=5000 && react-scripts start",
+    "start": "set PORT=5000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
