--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "antd": "^5.10.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "docx": "^8.5.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "history": "^5.0.1",
+    "html2canvas": "^1.4.1",
     "increase-memory-limit": "^1.0.7",
+    "jspdf": "^2.5.1",
     "material-table": "^1.69.3",
     "material-ui": "^0.20.2",
     "orgchart": "^3.8.0",
