--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "set PORT=5000 && react-scripts start",
-    "build": "react-scripts build",
+   "start": "serve -s build",
+  "build": "react-scripts build",
+  "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
