--- a/package.json
+++ b/package.json
@@ -58,14 +58,15 @@
     "reactstrap": "^8.10.0",
     "sass": "^1.52.3",
     "semantic-ui-react": "^2.1.3",
+    "serve": "^14.2.4",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.18.5",
     "yup": "^0.32.9"
   },
   "scripts": {
-   "start": "serve -s build",
-  "build": "react-scripts build",
-  "heroku-postbuild": "npm run build",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
