--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "antd": "^5.10.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "date-fns": "^4.1.0",
     "docx": "^8.5.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
