--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@heroicons/react": "^2.2.0",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.2.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.85",
@@ -28,7 +29,7 @@
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "antd": "^5.10.0",
-    "axios": "^0.21.4",
+    "axios": "^1.9.0",
     "bootstrap": "^5.1.0",
     "docx": "^8.5.0",
     "exceljs": "^4.4.0",
@@ -37,9 +38,9 @@
     "history": "^5.0.1",
     "html2canvas": "^1.4.1",
     "increase-memory-limit": "^1.0.7",
-    "jspdf": "^2.5.1",
-    "material-table": "^1.69.3",
-    "orgchart": "^3.8.0",
+    "jspdf": "^3.0.1",
+    "material-table": "^1.63.0",
+    "orgchart": "^2.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-csv": "^2.2.2",
@@ -49,7 +50,7 @@
     "react-modal": "^3.16.1",
     "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "react-select": "^5.0.0",
     "react-spinners": "^0.13.3",
     "react-toastify": "^8.0.2",
