--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "20.11.1",
-    "npm": "6.14.5"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
@@ -41,16 +41,16 @@
     "jspdf": "^3.0.1",
     "material-table": "^1.63.0",
     "orgchart": "^2.0.6",
-    "react": "^16.14.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-csv": "^2.2.2",
     "react-d3-tree": "^3.6.1",
-    "react-dom": "^16.14.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "react-modal": "^3.16.1",
     "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.0.0",
     "react-spinners": "^0.13.3",
     "react-toastify": "^8.0.2",
@@ -62,10 +62,11 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "set PORT=5000 && react-scripts start",
+  "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm install && npm run build"
   },
   "eslintConfig": {
     "extends": [
