--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "npm install --legacy-peer-deps && npm run build"
   },
   "eslintConfig": {
     "extends": [
