--- a/package.json
+++ b/package.json
@@ -63,11 +63,10 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "serve -s build",
+   "start": "set PORT=5000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
