--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     "web-vitals": "^1.1.2",
     "xlsx": "^0.18.5",
     "yup": "^0.32.9"
-  },    "scripts": {
-   "start": "react-scripts start",
+  },
+  "scripts": {
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -86,6 +87,7 @@
     ]
   },
   "devDependencies": {
+    "@csstools/normalize.css": "^12.1.1",
     "@types/react-router-dom": "^5.3.3"
   }
 }
