--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@heroicons/react": "^2.2.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/pickers": "^3.2.2",
-    "@mui/icons-material": "^5.8.4",
+    "@mui/icons-material": "^5.18.0",
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.17.1",
     "@stripe/react-stripe-js": "^1.6.0",
@@ -63,7 +64,7 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
